# path_tracer

./: .gitignore  CMakeLists.txt  README.md  camera.cpp  camera.h  hittable.h  light.h  main.cpp  renderer.cpp  renderer.h  run_profiling.sh  sphere.h  sphere_kernel.cu  sphere_kernel.cuh  vec3.h
reports/: report.ncu-rep  report_2026-02-27_18-31.ncu-rep  reportx2026-02-20_23-27.ncu-rep
src/: calculate_kernel.cu  calculate_kernel.cuh  camera.cpp  camera.h  camera.t.cpp  color.h  cuda_check.h  hittable.h  keyboard_handler.cpp  keyboard_handler.h  light.h  main.cpp  quaternion.cpp  quaternion.h  ray.h  renderer.cpp  renderer.h  sphere.h  sphere_kernel.cu  sphere_kernel.cuh  vec3.h
src/common/: vec3.h  vec3.t.cpp
